Fix back button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <a href="../" class="button-back-link">Volver ôô</a>
+    <a href="https://xn--ldaa.com/%F0%9F%91%A8%F0%9F%8F%BB/" class="button-back-link">Back ôô</a>
     <p class="message">Taller than <span id="tall-counter"></span> meters!!!</p>
     <div class="content" id="content">
       <pre id="pre-content"></pre><pre id="tall-content"></pre>
