--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta name="Tallest man in the world" http-equiv="Content-Type" content="text/html; charset=UTF-8;
     Author: Javier Blanco de Torres" />
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=2">
     <title>Tallest man in the world</title>
-    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
