--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>👨🏻 Tallest man in the world!</title>
     <link rel="shortcut icon" href="favicon.png" />
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Tallest man in the world</title>
     <link rel="stylesheet" href="styles.css">
   </head>
