--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="Tallest man in the world" http-equiv="Content-Type" content="text/html; charset=UTF-8;
-    Author: Javier Blanco de Torres" />
-    <title>👨🏻 Tallest man in the world!</title>
-    <link rel="shortcut icon" href="favicon.png" />
     <meta charset="UTF-8">
+    <meta name="author" content="Javier Blanco de Torres">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>👨🏻 Tallest man in the world</title>
+    <link rel="shortcut icon" href="https://xn--ldaa.com/img/favicon.png" />
+    <meta property="og:title" content="👨🏻 Tallest man in the world">
+    <meta property="og:description" content="Demonstration of a zoom loop made only with css and js. Maybe someday I'll make it super long.">
+    <meta property="og:image" content="https://xn--ldaa.com/img/tallest-man.png">
+    <meta property="og:url" content="https://tallest-man.xn--ldaa.com/">
+    <meta name="twitter:card" content="https://xn--ldaa.com/img/tallest-man.png">
+    <meta name="twitter:title" content="👨🏻 Tallest man in the world">
+    <meta name="twitter:description" content="Demonstration of a zoom loop made only with css and js. Maybe someday I'll make it super long.">
+    <meta name="twitter:image" content="https://tallest-man.xn--ldaa.com/">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
